# Smooth

./: CMakeLists.txt  README.md  daq.sh
Analysis/: Analysis(old).cpp  Analysis.cpp  Analysis_std.cpp  CMakeLists.txt  Plot_Eff.cpp
Run/: Ratio_4.txt  Ratio_5.txt  Signal.txt  Signal300.txt  Signal650.txt
Run/Apply/run/: Totoal_Info.txt
Run/Applying/run/: Totoal_Info.txt
Run/Eff/: Ratio_4.txt  Ratio_5.txt
Run/Eff/run/: Procees_content.txt  Run_64.txt
Run/MAKE/run/: Totoal_Info.txt
Run/Ratio45/: Ratio_4.txt  Ratio_5.txt
Run/Ratio45/runR191210/: Run_64.txt
Run/Ratio45/runR191210/buildR191210/: Analysis  Makefile  libChannel_rdict.pcm  libEvent_rdict.pcm
Run/Studying/run/: Ratio_4.txt  Ratio_5.txt  Run_64.txt
Run/TEST/: Ratio_4.txt  Ratio_5.txt
Run/Total/: Ratio_4.txt  Ratio_5.txt  Totoal_Info.txt
Run/Total/run/: Procees_content.txt  Run_64.txt
Run/buildR191210/: Analysis  CMakeCache.txt  G__Channel.cxx  G__Event.cxx  cmake_install.cmake  libChannel_rdict.pcm  libEvent_rdict.pcm
Run/buildR191211/: Analysis  CMakeCache.txt  G__Channel.cxx  G__Event.cxx  Makefile  cmake_install.cmake  libChannel_rdict.pcm  libEvent_rdict.pcm
Run/run/: Run_64.txt
Run62/: Ratio_4.txt  Ratio_5.txt  Signal.txt
Run62/buildR191210/: Analysis  CMakeCache.txt  G__Channel.cxx  G__Event.cxx  Makefile  cmake_install.cmake  libChannel_rdict.pcm  libEvent_rdict.pcm
